---------------------------------------------------------------
wxWidgets Change Log - For more verbose changes, see the manual
---------------------------------------------------------------

2.6.1
-----
All:

wxMac:
- Added support for launching 'APPL' bundles with wxExecute (usually they have a .app extension and are the ones that reside in the Applications folder).

2.6.0
-----

All:

- wxPathExists deprecated, use wxDirExists instead.
- Configure: --enable-std_iostreams, --enable-std_string are now the default.

All (GUI):

- Fixed ~wxStatusBar and ~wxToolBar which tried to check
  non-existent wxFrameBase RTTI, causing a crash if not in a frame.

wxMSW:

- Fixed static box border when the label is empty.
- Fixed SetBackgroundColour() to change only label background, not entire box.
- wxHelpController is now aliased to wxCHMHelpController.

wxWinCE:

- Fixed device origin setting and clipping region setting.

wxGTK:
- New configure syntax for specifying the GTK+ version.
    --with-gtk             Use GTK 2.x, no fallback
    --with-gtk=1           Use GTK 1.2, no fallback
    --with-gtk=2           Use GTK 2.x, no fallback
    --with-gtk=any         Use any available GTK
- wxMenuItem::SetText() takes care of hotkeys, too.
- Reworked text wrapping for wxStaticText.

wxMac:
- Implemented most of the wxFileType and wxMimeTypesManager functions

2.5.5
-----

All:

- wxURI::GetUser() only returns the user name now, use GetUserInfo() to get
  user and password as in 2.5.4; wxURI::GetPassword() added.
- Added wxDebugReport class.
- Added wxTempFileOutputStream by Stas Sergeev.
- Fixed wxDateTime::SetToWeekDayInSameWeek(Sun, Monday_First).
- Added WXK_SPECIAL keycodes for special hardware buttons.
- Fixed bug with wxFile::Seek(-1, wxFromCurrent).
- Added wxString/C array constructors to wxArrayString.
- Added wxMemoryInputStream(wxMemoryOutputStream&) constructor (Stas Sergeev)

All (GUI):

- Added GetIcon, GetBitmap to wxImageList. wxGenericImageList's original